--- a/public/post.html
+++ b/public/post.html
@@ -175,9 +175,9 @@ DRY, упрощенная формулировка - "не дублируйте 
 
 Первая функция описывает детали получения значения с события нашего <code>input</code>. У нас есть на выбор 2 абстракции, в которых мы можем хранить эту логику: <code>InputField</code> и <code>LogInForm</code>.
 
-Для того, чтобы наверняка правильно определиться к какой из абстракций нам нужно отнести свой код, прийдется обратиться к полной формулировке принципа DRY: "Каждая часть знания должна иметь единственное, непротиворечивое и авторитетное представление в рамках системы".
+Для того, чтобы наверняка правильно определиться к какой из абстракций нам нужно отнести свой код, придется обратиться к полной формулировке принципа DRY: "Каждая часть знания должна иметь единственное, непротиворечивое и авторитетное представление в рамках системы".
 
-Частью знания в конкретном примере является знание о том, как получать значение из события в <code>input</code>. Если мы будем это знание хранить в нашем <code>LogInForm</code>, то очевидно, что при использовании нашего <code>InputField</code> в другой форме, нам прийдется продублировать наше знание, либо вынести его в одельную абстракцию и использовать ее оттуда. А исходя из принципа KISS, у нас должно быть минимально возможное количество абстракций. Действительно, зачем нам создавать еще одну абстракцию, если мы можем просто поместить эту логику в нашем <code>InputField</code>, и внешний код не будет знать ничего о том, как работает input внутри самого <code>InputField</code>, он будет просто принимать готовое значение, такое же, как передает внутрь.
+Частью знания в конкретном примере является знание о том, как получать значение из события в <code>input</code>. Если мы будем это знание хранить в нашем <code>LogInForm</code>, то очевидно, что при использовании нашего <code>InputField</code> в другой форме, нам придется продублировать наше знание, либо вынести его в одельную абстракцию и использовать ее оттуда. А исходя из принципа KISS, у нас должно быть минимально возможное количество абстракций. Действительно, зачем нам создавать еще одну абстракцию, если мы можем просто поместить эту логику в нашем <code>InputField</code>, и внешний код не будет знать ничего о том, как работает input внутри самого <code>InputField</code>, он будет просто принимать готовое значение, такое же, как передает внутрь.
 
 Если вас смущает, что вам в будущем может понадобиться событие, вспомните о принципе YAGNI. Всегда можно будет добавить дополнительный prop <code>onChangeEvent</code> в наш компонент <code>InputField</code>.
 
@@ -419,7 +419,7 @@ DRY, упрощенная формулировка - "не дублируйте 
 </source>
 В итоге с 15 строчек кода получаем 14. Браво! Вот это я понимаю DRY. Если у нас здесь будет 100 таких input-ов, то мы получим 500 и 402 строчки соответсвенно.
 
-Но, как результат, мы получили более сложный код, нарушив принцип KISS. Ведь теперь он состоит из 2-х абстракций, fields и алгоритм, который превращает его в дерево React-элементов (да, алгоритм - это тоже абстракция), и при чтении этого кода нам прийдется постоянно прыгать между ними.
+Но, как результат, мы получили более сложный код, нарушив принцип KISS. Ведь теперь он состоит из 2-х абстракций, fields и алгоритм, который превращает его в дерево React-элементов (да, алгоритм - это тоже абстракция), и при чтении этого кода нам придется постоянно прыгать между ними.
 
 Но самая большая проблема этого кода - это его поддержка и расширение.
 Представте, что с ним случится, если:
@@ -431,7 +431,7 @@ DRY, упрощенная формулировка - "не дублируйте 
   <li>Можно продолжать долго...</li>
 </ul>
 
-Для реализации этого всегда прийдется хранить какие-то функции в вашем конфиге, а код, который рендерит конфиг, постепенно превратится в Франкенштейна, принимая кучу разных пропсов и закидывая их по разным компонентам.
+Для реализации этого всегда придется хранить какие-то функции в вашем конфиге, а код, который рендерит конфиг, постепенно превратится в Франкенштейна, принимая кучу разных пропсов и закидывая их по разным компонентам.
 
 Код, который был написан до этого, основанный на композиции компонентов, будет спокойно расширяться, меняться как угодно при этом не сильно усложнясь, а все благодаря отсутсвию промежуточной абстракции - алгоритма, который строит дерево React-элементов из нашего конфига.
 
